Index Presentation modify

--- a/index.html
+++ b/index.html
@@ -40,21 +40,18 @@
                     <h1 id="ABOUT">ABOUT ME</h1>
                     <h2>RESUME</h2>
 					<h3>
-							Hello ! My name is Romain and I enjoy new challenges. 
-							I live in Brussel since the begiging of 2026, and i'm into  python, and rust development. Through my experiences, 
-							I worked in Linux environment as Devops and Adminitrator system for five years. Since the beginning of 2025, I am learning 
-							Machine Learning, Deep Learning with sklearn and pytorch to develop model regression and classification. After my degree in data science
-							I go more in depth for architecture in Transformer, Convolutional Neuronal Network. 
-							During four years I had the chance to work in large infrastructures such as the Ministry of the Army 
-							and the CNRS. 
-							Now, I want to discover new experiences.
+							Hi! My name is Romain and I love taking on new challenges. 
+							I’ve been living in Brussels since early 2026, and I’m passionate about Python and Rust development. 
+							Over the years, I’ve worked in Linux environments as a DevOps and system administrator for four years.
+
+							Since early 2025, I’ve been learning Machine Learning and Deep Learning, using scikit-learn and 
+							PyTorch to build regression and classification models. After earning my degree in data science,
+							I went deeper into architectures like Transformers and Convolutional Neural Networks. For four years, 
+							I had the opportunity to work on large infrastructures, such as those at the Ministry of the Army and the CNRS.
+							My mission was to create Python scripts to automate tests, maintain the platform, deploy virtual environments 
+							for developers based on their needs, and find solutions to dependency issues 
+							Now, I’m eager to discover new experiences.
 					</h3>
-                    <h2>IN THE LIFE</h2>
-                    <h3>
-						I am also producing music on Ableton Live and hardware with analog, modular synthesizers and drum machines. 
-						If you want to listen it, you can check my soundcloud profile and you can find my little 
-						javascript synthesizer <a href="synth/synth.html">here.</a>
-                    </h3>
 				</div>
 				<div class="resume2">
 					<img src="img/me.png" height="300" width="300" alt="">
