--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 				</div>
 				</div>
 				<div class="project-card">
-				<a href="https://agentbosh.streamlit.app/" class="card-link">
+				<a href="https://github.com/JilibR/agentic_AI_chat" class="card-link">
 					<div class="card-image">
 					<img src="img/agent1.png" alt="Aperçu du projet : API en Rust">
 					</div>
